# Jobs_Applier_AI_Agent_AIHawk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
data_folder/: plain_text_resume.yaml
data_folder_example/: plain_text_resume.yaml  work_preferences.yaml
src/: app_config.py  cli.py  config_validator.py  file_manager.py  job.py  job_application_saver.py  logging.py
src/libs/: job_service.py  llm_manager.py
src/libs/job_fetch_pipeline/: __init__.py  job_parser.py  job_service.py  job_store.py
src/libs/llm/: __init__.py  llm_config.py  llm_logger.py  llm_provider.py
src/libs/resume_and_cover_builder/: __init__.py  builder_config.py  config.py  module_loader.py  resume_facade.py  resume_generator.py  resume_service.py  style_manager.py  template_base.py  utils.py
src/libs/resume_and_cover_builder/cover_letter_prompt/: strings_feder-cr.py
src/libs/resume_and_cover_builder/llm/: llm_chat_model.py  llm_generate_cover_letter_from_job.py  llm_generate_resume.py  llm_generate_resume_from_job.py  llm_job_parser.py
src/libs/resume_and_cover_builder/prompts/: strings_feder_cr.py
src/libs/resume_and_cover_builder/resume_job_description_prompt/: strings_feder-cr.py  strings_feder_cr.py
src/libs/resume_and_cover_builder/resume_prompt/: strings_feder-cr.py  strings_feder_cr.py
src/libs/resume_and_cover_builder/resume_style/: style_chengyenwu.css  style_cloyola.css  style_josylad_blue.css  style_josylad_grey.css  style_krishnavalliappan.css  style_samodum_bold.css
src/libs/resume_and_cover_builder/tasks/: generate_cover_letter_from_job.py  generate_resume.py
src/resume_schemas/: common.py  job_application_profile.py  resume.py
src/schemas/: job_application_profile.py  job_parse_output.py  resume.py
src/utils/: chrome_utils.py  constants.py
tests/: conftest.py  test_config.py  test_config_validator.py  test_global_config.py  test_job_store.py  test_llm_job_parser.py  test_schemas.py
