[project]
name = "jobs-applier-ai-agent-aihawk"
version = "0.1.0"
description = "AI-powered job application automation agent"
requires-python = ">=3.11,<3.14"
dependencies = [
    "click",
    "httpx~=0.27.2",
    "inquirer",
    "inputimeout==1.0.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "langchain==0.2.11",
    "langchain-anthropic",
    "langchain-huggingface",
    "langchain-community==0.2.10",
    "langchain-core==0.2.36",
    "langchain-google-genai==1.0.10",
    "langchain-ollama==0.1.3",
    "langchain-openai==0.1.17",
    "langchain-text-splitters==0.2.2",
    "langsmith==0.1.93",
    "levenshtein==0.25.1",
    "loguru==0.7.2",
    "openai==1.37.1",
    "pdfminer-six==20221105",
    "python-dotenv~=1.0.1",
    "pyyaml~=6.0.2",
    "regex==2024.7.24",
    "reportlab==4.2.2",
    "selenium==4.9.1",
    "webdriver-manager==4.0.2",
    "undetected-chromedriver==3.5.5",
    "requests>=2.32.5",
    "chardet>=3.0.2,<6.0.0",
    "pydantic[email]>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-mock",
    "pytest-cov",
    "pre-commit>=4.0.0",
    "ruff>=0.9.10",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line too long – prompt template strings exceed 120 chars
    "B006",   # mutable default argument – existing code uses these
    "B904",   # raise-without-from inside except – existing code pattern
    "UP007",  # use X | Y for unions – keep Optional for py3.10 compat
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
